- Fix send message button in header - Several fixes in user edit/add/list - Update badges/buttons - Change line color in timeline - Fix images in search result - Fix button in calendar - Change collapse box shadow - Fix titles in notification page

--- a/src/app/modules/templates/extra/components/search-result-item/search-result-item.component.scss
+++ b/src/app/modules/templates/extra/components/search-result-item/search-result-item.component.scss
@@ -17,10 +17,7 @@
 }
 
 .img {
-  width: 20%;
-
   @media (max-width: $small) {
-    width: 50%;
     height: auto;
   }
 }
