--- a/src/app/modules/templates/extra/containers/calendar-page/calendar-page.component.scss
+++ b/src/app/modules/templates/extra/containers/calendar-page/calendar-page.component.scss
@@ -39,6 +39,7 @@
 .external-event {
   cursor: pointer;
   margin: 16px 0;
+  padding: 16px;
   box-shadow: 0 3px 11px 0 $shadow-white, 0 3px 3px -2px $shadow-grey, 0 1px 8px 0 $shadow-dark-grey;
 }
 
