--- a/src/app/modules/templates/extra/containers/time-line-page/time-line-page.component.scss
+++ b/src/app/modules/templates/extra/containers/time-line-page/time-line-page.component.scss
@@ -30,7 +30,7 @@
 .line {
   width: 2px;
   height: 100%;
-  background-color: $dark-grey;
+  background-color: #bdbdbd;
 }
 
 .line-wrapper {
