--- a/src/app/styles/mat-expansion-panel.scss
+++ b/src/app/styles/mat-expansion-panel.scss
@@ -2,10 +2,6 @@
 @import 'src/app/styles/colors';
 
 @mixin mat-expansion-panel {
-  mat-expansion-panel.mat-expansion-panel:not([class*=mat-elevation-z]) {
-    box-shadow: $card-shadow;
-  }
-
   .mat-expansion-indicator::after {
     color: $white;
   }
